--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Nutritions App</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Nutrition App</string>
+    <string name="home">Home</string>
+    <string name="bmi">BMI</string>
+    <string name="search">Search</string>
 
 </resources>
