--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">Nutritions App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="meal_image">meal image</string>
+    <string name="search">Search</string>
+    <string name="search_hint">Search Here</string>
 
 </resources>
