--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
-    <string name="app_name">Nutritions App</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Nutrition App</string>
+    <string name="meal_image">meal image</string>
+    <string name="search">Search</string>
+    <string name="search_hint">Search Here</string>
+    <string name="home">Home</string>
+    <string name="bmi">BMI</string>
+    <string name="calories_tv">%s calories</string>
 
 </resources>
