--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="protein_gram">%s gram</string>
     <string name="fat_gram">%s gram</string>
     <string name="servings_number">%s Servings</string>
+    <string name="calories_number">%s Kcal</string>
     <string name="preparation">Preparation</string>
     <string name="meal_details">Meal Details</string>
+    <string name="empty_meal_list">No item in meal yet!!</string>
 </resources>
