--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="fat_gram">%s gram</string>
     <string name="servings_number">%s Servings</string>
     <string name="calories_number">%s Kcal</string>
+    <string name="reminder_number">Reminder \n %s</string>
     <string name="preparation">Preparation</string>
     <string name="meal_details">Meal Details</string>
     <string name="empty_meal_list">No item in meal yet!!</string>
