Fix minor issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="fat_gram">%s gram</string>
     <string name="servings_number">%s Servings</string>
     <string name="calories_number">%s Kcal</string>
+    <string name="reminder_number">Reminder \n %s</string>
     <string name="preparation">Preparation</string>
     <string name="meal_details">Meal Details</string>
     <string name="empty_meal_list">Please, add your meal items!!</string>
