--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,7 @@
     <string name="cm_text">cm</string>
     <string name="feet">Feet</string>
     <string name="pound">Pound</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
 
 </resources>
