edit_of_design_and_code_bmi_screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="pound">Pound</string>
     <string name="weight">Weight</string>
     <string name="height">Height</string>
+    <string name="hinit_tips">For an ideal weight, some tips will be displayed that suits your weight here .</string>
 
 </resources>
