--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="mediterraneanHeadline">Mediterranean Diet</string>
     <string name="mediterraneanDiet">2000 calorie mediterranean diet meal plan suggest depends on consuming about 167g of carbs, 50g of protein and 135g of fat.</string>
     <string name="question">Which diet type do You prefer ?</string>
+    <string name="toast_calculate_bmi">Please enter your  weight:between(40-132)  and  height:between(140-210)</string>
+    <string name="toast_make_sure">\"Please make sure that you enter the correct values \"</string>
 </resources>
