fix_search_card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,8 @@
     <string name="toast_calculate_bmi">Please enter your  weight:between(40-132)  and  height:between(140-210)</string>
     <string name="toast_make_sure">\"Please make sure that you enter the correct values \"</string>
     <string name="meal_name_text">Meal Item Name</string>
+    <string name="proteins_tv">%s proteins</string>
+    <string name="carbs_tv">%s carbs</string>
+    <string name="fats_tv">%s fats</string>
 
 </resources>
