change app logo and diet icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,5 +78,8 @@
     <string name="age_error">Incorrect Age</string>
     <string name="height_error">Incorrect Height</string>
     <string name="weight_error">Incorrect Weight</string>
+    <string name="proteins_tv">%s proteins</string>
+    <string name="carbs_tv">%s carbs</string>
+    <string name="fats_tv">%s fats</string>
 
 </resources>
