--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="tips_text">Tips</string>
     <string name="carbs">Carbs</string>
     <string name="protein">Protein</string>
+    <string name="profile">Profile</string>
     <string name="fat">Fat</string>
     <string name="ingredients">Ingredients (%s calories)</string>
     <string name="calories_tv">%s calories</string>
